--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<img scr= https://s3.amazonaws.com/ironboard-learn/lion.jpg alt="Its a lion" title= "ROAR!">
+<img src= https://s3.amazonaws.com/ironboard-learn/lion.jpg alt="Its a lion" title= "ROAR!">
 
 </body>
 </html>
