--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<img src= https://s3.amazonaws.com/ironboard-learn/lion.jpg alt="Its a lion" title= "ROAR!">
+<img src= https://s3.amazonaws.com/ironboard-learn/lion.jpg>
+<img src= https://s3.amazonaws.com/ironboard-learn/lion.jpg alt= "I am a lion">
+<img src= https://s3.amazonaws.com/ironboard-learn/lion.jpg alt= "I am a lion" title= "ROAR!">
 
 </body>
 </html>
